--- a/script_submission.ipynb
+++ b/script_submission.ipynb
@@ -58,7 +58,7 @@
     "    predictions['id'] = new_test['id']\n",
     "    predictions = predictions.reindex(columns=['id', 'score'])\n",
     "    submissions = predictions.groupby('id').mean().reset_index()\n",
-    "    submissions.to_csv(\"subtest.csv\")"
+    "    submissions.to_csv(\"subtest.csv\", index=False)"
    ]
   },
   {
